 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-2010: registered jars on distributed cache (traviscrawford and julienledem via dvryaboy)

PIG-2533: Pig MR job exceptions masked on frontend (traviscrawford via dvryaboy)

PIG-2525: Support pluggable PigProcessNotifcationListeners on the command line (dvryaboy)

PIG-2515: [piggybank] Make CustomFormatToISO return null on Exception in parsing dates (rjurney via dvryaboy)

PIG-2503: Make @MonitoredUDF inherited (dvryaboy)

PIG-2488: Move Python unit tests to e2e tests (alangates via daijy)

PIG-2456: Pig should have a pigrc to specify default script cache (prkommireddi via daijy)

PIG-2496: Cache resolved classes in PigContext (dvryaboy)

PIG-2482: Integrate HCat DDL command into Pig (daijy)

PIG-2479: changingPattern should be used with checkmodified in ivysettings.xml (abayer via azaroth)

PIG-2349: Ant build repeats ivy-buildJar several times (azaroth)

PIG-2359: Support more efficient Tuples when schemas are known (dvryaboy)

PIG-2282: Automatically update Eclipse .classpath file when new libs are added to the classpath through Ivy (azaroth via daijy)

PIG-2468: Speed up TestBuiltin (dvryaboy)

PIG-2467: Speed up TestCommit (dvryaboy)

PIG-2460: Use guava 11 instead of r06 (dvryaboy)

PIG-2267: Make the name of the columns in schema optional (jcoveney via daijy)

PIG-2453: Fetching schema can be very slow for multi-thousand file LOADs (dvryaboy)

PIG-2443: [Piggybank] Add UDFs to check if a String is an Integer And if a String is Numeric (prkommireddi via daijy)

PIG-2437: Use Ivy to get automaton.jar (azaroth)

PIG-2448: Convert more tests to use LOCAL mode (dvryaboy)
